# wikidata-json-filter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  wxyc-etl-pin.txt
.github/workflows/: ci.yml  rebuild-cache.yml
migrations/: 0001_initial.sql  0002_wxyc_library_v2.sql  0003_wxyc_identity_match_functions.sql
schema/: create_database.sql
src/: extractor.rs  filter.rs  import.rs  import_schema.rs  lib.rs  main.rs  model.rs  writer.rs  wxyc_loader.rs
tests/: charset_torture.rs  cli_tests.rs  error_handling.rs  import_test.rs  oracle_tests.rs  pg_import_test.rs  wxyc_identity_match_parity_test.rs  wxyc_library_v2_test.rs
tests/fixtures/: small_dump.json
tests/fixtures/expected/: discogs_mapping.csv  entity.csv  entity_alias.csv  genre.csv  influence.csv  label_hierarchy.csv  occupation.csv  record_label.csv
tests/fixtures/import/: discogs_mapping.csv  entity.csv  entity_alias.csv  genre.csv  influence.csv  occupation.csv  record_label.csv
