[package]
name = "wikidata-json-filter"
version = "0.1.0"
edition = "2024"
description = "Streaming filter for Wikidata JSON dumps — extracts music-relevant entities to CSV"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
wxyc-etl = { path = "../3a-wxyc-etl-combined/wxyc-etl" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
postgres = "0.19"
pretty_assertions = "1"
csv = "1.3"

[profile.release]
lto = true
codegen-units = 1
