[package]
name = "wikidata-cache"
version = "0.1.0"
edition = "2024"
description = "Streaming filter for Wikidata JSON dumps + PostgreSQL cache builder for music-relevant entities"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5"
rayon = "1.10"
csv = "1.3"
anyhow = "1"
log = "0.4"
tracing = "0.1"
wxyc-etl = "0.3.0"
postgres = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
postgres = "0.19"
pretty_assertions = "1"
csv = "1.3"

[profile.release]
lto = true
codegen-units = 1
